@@ -52,8 +52,6 @@ JNIEXPORT void JNICALL Java_com_tightdb_Group_nativeClose
  * Method:    nativeEquals
  * Signature: (JJ)Z
  */
-JNIEXPORT jboolean JNICALL Java_com_tightdb_Group_nativeEquals
-  (JNIEnv *, jobject, jlong, jlong);
 
 /*
  * Class:     com_tightdb_Group
@@ -113,19 +111,18 @@ JNIEXPORT jbyteArray JNICALL Java_com_tightdb_Group_nativeWriteToMem
 
 /*
  * Class:     com_tightdb_Group
- * Method:    nativeCommit
- * Signature: (J)V
- */
-JNIEXPORT void JNICALL Java_com_tightdb_Group_nativeCommit
- (JNIEnv *, jobject, jlong);
-    
-
-/*
- * Class:     com_tightdb_Group
  * Method:    nativeToJson
  * Signature: (J)Ljava/lang/String;
  */
 JNIEXPORT jstring JNICALL Java_com_tightdb_Group_nativeToJson
+  (JNIEnv *, jobject, jlong);
+
+/*
+ * Class:     com_tightdb_Group
+ * Method:    nativeCommit
+ * Signature: (J)V
+ */
+JNIEXPORT void JNICALL Java_com_tightdb_Group_nativeCommit
   (JNIEnv *, jobject, jlong);
 
 /*
