@@ -11,7 +11,7 @@ using std::string;
 
 int trace_level = 0;
 
-static int TIGHTDB_JNI_VERSION = 19;
+static int TIGHTDB_JNI_VERSION = 20;
 
 JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM*, void*)
 {
