@@ -7,9 +7,8 @@
 #ifdef __cplusplus
 extern "C" {
 #endif
-
 #undef com_tightdb_internal_Util_REQUIRED_JNI_VERSION
-#define com_tightdb_internal_Util_REQUIRED_JNI_VERSION 19i64
+#define com_tightdb_internal_Util_REQUIRED_JNI_VERSION 20i64
 /*
  * Class:     com_tightdb_internal_Util
  * Method:    nativeGetMemUsage
